[gd_scene load_steps=14 format=3 uid="uid://dxxdx32akd0ar"]

[ext_resource type="Script" path="res://Scripts/bomb_projectile.gd" id="1_gibda"]
[ext_resource type="Texture2D" uid="uid://oydleafauhon" path="res://Sprites/bomb.png" id="2_v3a1f"]
[ext_resource type="Texture2D" uid="uid://qxd01m0jab1l" path="res://Sprites/bomb-flame.png" id="3_gijo5"]
[ext_resource type="PackedScene" uid="uid://dntxntn76kbu" path="res://Components/hitbox_component.tscn" id="4_wi1wa"]
[ext_resource type="Texture2D" uid="uid://bf03ymgft7e8b" path="res://Sprites/explosion_frame.png" id="5_sbfuh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lk6s8"]
radius = 8.0

[sub_resource type="Animation" id="Animation_0ob6j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nu06l"]
resource_name = "bomb_flame"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jkqa2"]
_data = {
"RESET": SubResource("Animation_0ob6j"),
"bomb_flame": SubResource("Animation_nu06l")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4gomn"]
radius = 149.003

[sub_resource type="Animation" id="Animation_cahic"]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.17, 0.17), Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_tmvp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.17, 0.17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uneyh"]
_data = {
"RESET": SubResource("Animation_tmvp2"),
"explode": SubResource("Animation_cahic")
}

[node name="Bomb" type="Node2D"]
script = ExtResource("1_gibda")

[node name="ContactCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactCollider"]
shape = SubResource("CircleShape2D_lk6s8")

[node name="bomb_sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_v3a1f")

[node name="Sprite2D" type="Sprite2D" parent="bomb_sprite"]
position = Vector2(0, 5.5)
texture = ExtResource("3_gijo5")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="bomb_sprite"]
autoplay = "bomb_flame"
libraries = {
"": SubResource("AnimationLibrary_jkqa2")
}

[node name="ExplosionCollider" parent="." instance=ExtResource("4_wi1wa")]
collision_mask = 4
damage = 10

[node name="ExplosionCollisionShape" type="CollisionShape2D" parent="ExplosionCollider"]
shape = SubResource("CircleShape2D_4gomn")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.17, 0.17)
texture = ExtResource("5_sbfuh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uneyh")
}

[connection signal="area_entered" from="ContactCollider" to="." method="_on_contact_collider_area_entered"]
